[project]
name = "miv-simulator"
version = "0.0.5"
description = "Mind-In-Vitro simulator"
authors = []
dependencies = [
    "neuroh5 @ git+https://github.com/iraikov/neuroh5.git",
    "treverhines-rbf>=2024.3.21",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",
    "matplotlib>=3.9.2",
    "neuron>=8.2.6",
    "quantities>=0.16.0",
    "machinable>=4.10.3",
    "networkx>=3.2.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/miv_simulator"]
