[project]
name = "miv-simulator"
version = "0.0.12"
description = "Mind-In-Vitro simulator"
authors = []
dependencies = [
    "neuroh5 @ git+https://github.com/iraikov/neuroh5.git",
    "treverhines-rbf>=2024.3.21",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",
    "matplotlib>=3.9.2",
    "neuron>=8.2.6",
    "quantities>=0.16.0",
    "machinable>=4.10.3",
    "networkx>=3.2.1",
    "scipy>=1.13",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.optional-dependencies]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "readthedocs-sphinx-search",
  "sphinx-autodoc-typehints",
  "myst-nb",
  "numpydoc",
  "sphinx-togglebutton",
  "sphinx-copybutton",
  "sphinx-click",
  "sphinxcontrib-mermaid"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.2",
    "ruff==0.9.3",
]

[tool.uv.sources]
treverhines-rbf = { git = "https://github.com/treverhines/RBF" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/miv_simulator"]

[project.scripts]
# Main functions
make-h5types = "miv_simulator.scripts.make_h5types:main"
measure-distances = "miv_simulator.scripts.measure_distances:main"
generate-distance-connections = "miv_simulator.scripts.generate_distance_connections:main"
generate-gapjunctions = "miv_simulator.scripts.generate_gapjunctions:main"
generate-input-features = "miv_simulator.scripts.generate_input_features:main"
generate-input-spike-trains = "miv_simulator.scripts.generate_input_spike_trains:main"
generate-soma-coordinates = "miv_simulator.scripts.generate_soma_coordinates:main"
distribute-synapse-locs = "miv_simulator.scripts.distribute_synapse_locs:main"
run-network = "miv_simulator.scripts.run_network:main"
network-clamp = "miv_simulator.scripts.analysis.network_clamp:main_cli"
# Analysis scripts
plot-biophys-cell-tree = "miv_simulator.scripts.analysis.plot_biophys_cell_tree:main"
plot-cell-tree = "miv_simulator.scripts.analysis.plot_cell_tree:main"
plot-coords-in-volume = "miv_simulator.scripts.analysis.plot_coords_in_volume:main"
plot-network-clamp = "miv_simulator.scripts.analysis.plot_network_clamp:main"
plot-spike-raster = "miv_simulator.scripts.analysis.plot_spike_raster:main"
plot-state = "miv_simulator.scripts.analysis.plot_state:main"
plot-single-vertex-dist = "miv_simulator.scripts.analysis.plot_single_vertex_dist:main"
plot-spatial-spike-raster = "miv_simulator.scripts.analysis.plot_spatial_spike_raster:main"
plot-lfp = "miv_simulator.scripts.analysis.plot_lfp:main"
plot-lfp-spectrogram = "miv_simulator.scripts.analysis.plot_lfp_spectrogram:main"
#Tools
show-h5types = "miv_simulator.scripts.tools.show_h5types:main"
query-cell-attrs = "miv_simulator.scripts.tools.query_cell_attrs:main"
check-config = "miv_simulator.scripts.tools.check_config:main"
cut-slice = "miv_simulator.scripts.tools.cut_slice:main"
sample-cells = "miv_simulator.scripts.tools.sample_cells:main"
reposition-trees = "miv_simulator.scripts.tools.reposition_trees:main"
optimize-network = "miv_simulator.scripts.optimization.optimize_network:main_cli"
