[tool.poetry]
name = "miv-data"
version = "0.0.1"
description = "Mind-in-Vitro data"
readme = "miv_data/README.md" # root-relative, adjust later
authors = []

packages = [
    { include = "miv_data", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
neuroh5 = {git = "https://github.com/iraikov/neuroh5.git"}

[build-system]
requires = ["poetry_core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"