[project]
name = "miv_data"
version = "0.1.0"
description = "Mind-in-Vitro data"
authors = [
    { name = "Frithjof Gressmann", email = "fg14@illinois.edu" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["miv_data"]
